# chat-app-layered-ddd-rs

./: AGENTS.md  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/adr/: 0001-message-pusher-abstraction-and-placement.md  0002-cargo-workspace-structure.md
docs/notes/: 20251112-023427_repository-and-message-sending-responsibility.md
docs/tasks/: 20251111-215228_layered-architecture-refactoring.md  20251111-233035_fix-flaky-integration-tests.md  20251111-tasks.md  20251112-032514_introduce-message-pusher.md
src/: client.rs  lib.rs  logger.rs  server.rs  time.rs  types.rs
src/domain/: entity.rs  error.rs  mod.rs  repository.rs  value_object.rs
src/infrastructure/: mod.rs
src/infrastructure/dto/: mod.rs
src/infrastructure/repository/: mod.rs
src/infrastructure/repository/inmemory/: room.rs
src/server/: runner.rs
src/ui/: mod.rs  runner.rs  server.rs  state.rs
src/ui/handler/: http.rs  websocket.rs
src/usecase/: connect_participant.rs  disconnect_participant.rs  error.rs  mod.rs  send_message.rs
src/utils/client/: mod.rs
tests/: http_api.rs  integration_test.rs  websocket_connection.rs  websocket_messaging.rs
tests/fixtures/: mod.rs
